--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,3 @@
-# Do not change version. This is the version of aws buildspec, not the version of your buildspec file.
 version: 0.2
 
 phases:
@@ -7,9 +6,17 @@ phases:
       nodejs: 12
   pre_build:
     commands:
+      - echo Install newest npm
+      - npm install --silent --no-progress -g npm
       - echo Install dependencies
       - npm install
   build:
     commands:
       - echo Build started on `date`
       - npm run build
+artifacts:
+  files:
+    - .build/**/*
+    - .sst/*
+    - client/dist/*
+    - buildspec-deploy.yml
