--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ phases:
   install:
     runtime-versions:
       nodejs: 12
+    commands:
+      - npm install --silent --no-progress -g npm
   pre_build:
     commands:
       - echo Install newest npm
